add patterns for News Detail, Contact section

--- a/styleguide/source/_patterns/01-molecules/07-sidebars/02-sidebar-form.mustache
+++ b/styleguide/source/_patterns/01-molecules/07-sidebars/02-sidebar-form.mustache
@@ -1,5 +1,5 @@
 <article class="sidebar-article sidebar-form">
-	<h3>Joing Mailing List</h3>
+	<h3>Join Mailing List</h3>
 	<p>{{excerpt.short}}</p>
 	{{>molecules-inline-form}}		
 </article>
