--- a/styleguide/source/_patterns/03-templates/04-pet-owners/01-faq.mustache
+++ b/styleguide/source/_patterns/03-templates/04-pet-owners/01-faq.mustache
@@ -4,7 +4,7 @@
 			{{>molecules-breadcrumbs}}
 			{{>atoms-heading-h2}}
 			{{>atoms-paragraph}}
-			<ul>
+			<ul class="toggle-list">
 				{{# listItems.four}}
 				<li>{{>molecules-toggle}}</li>
 				{{/ listItems.four}}
