--- a/styleguide/source/_patterns/03-templates/05-news/01-news-detail.mustache
+++ b/styleguide/source/_patterns/03-templates/05-news/01-news-detail.mustache
@@ -1,3 +1,16 @@
 {{> organisms-header }}
-
+<div class="container">
+	<section class="primary">
+		{{>molecules-breadcrumbs}}
+		{{>molecules-figure-with-caption}}
+		{{>organisms-body-text}}
+	</section>
+	<section class="sidebar">
+		{{>molecules-sidebar-form}}
+		{{>molecules-sidebar-nav}}
+		{{>molecules-sidebar-select}}
+		{{>molecules-sidebar-form}}
+		{{>molecules-sidebar-select}}
+	</section>
+</div>
 {{>organisms-footer }}
