--- a/styleguide/source/_patterns/03-templates/06-contact/00-contact-form.mustache
+++ b/styleguide/source/_patterns/03-templates/06-contact/00-contact-form.mustache
@@ -1,3 +1,19 @@
 {{> organisms-header }}
+<div class="container">
+	<section class="primary">
+		{{>molecules-breadcrumbs}}
+		{{>atoms-heading-h2}}
+		{{>atoms-paragraph}}
 
+		<p class="address">{{ contact.address1 }}<br>{{ contact.address2 }}</p>
+		<p><strong>Phone: {{ contact.phone }}</strong><br>Fax: {{ contact.fax }}</p>
+
+		{{>molecules-comment-form}}
+	</section>
+	<section class="sidebar">
+		{{>molecules-sidebar-nav}}
+		{{>molecules-sidebar-form}}
+	</section>
+</div>
+{{>organisms-thankyou-carousel }}
 {{>organisms-footer }}
