--- a/styleguide/source/_patterns/03-templates/06-contact/01-directions.mustache
+++ b/styleguide/source/_patterns/03-templates/06-contact/01-directions.mustache
@@ -1,3 +1,16 @@
 {{> organisms-header }}
-
+<div class="container">
+	<section class="primary">
+		{{>molecules-breadcrumbs}}
+		{{>atoms-iframe-map}}
+		{{# listItems.four }}
+			{{>atoms-paragraph}}
+		{{/ listItems.four }}	
+	</section>
+	<section class="sidebar">
+		{{>molecules-sidebar-nav}}
+		{{>molecules-sidebar-form}}
+	</section>
+</div>
+{{>organisms-thankyou-carousel }}
 {{>organisms-footer }}
