--- a/styleguide/source/_patterns/00-atoms/03-lists/01-ordered.mustache
+++ b/styleguide/source/_patterns/00-atoms/03-lists/01-ordered.mustache
@@ -1,7 +1,5 @@
-<div class="primary">
-	<ol>
-		<li>This is a list item in an ordered list</li>
-		<li>An ordered list is a list in which the sequence of items is important. An ordered list does not necessarily contain sequence characters.</li>
-		<li>This is the last list item</li>
-	</ol>
-</div>
+<ol class="numbers">
+	<li>This is a list item in an ordered list</li>
+	<li>An ordered list is a list in which the sequence of items is important. An ordered list does not necessarily contain sequence characters.</li>
+	<li>This is the last list item</li>
+</ol>
