--- a/styleguide/source/css/patterns/_media.scss
+++ b/styleguide/source/css/patterns/_media.scss
@@ -44,3 +44,19 @@ figure {
     }
   }
 }
+
+.iframe-container {
+  position: relative;
+  padding-bottom: 56.25%; /* maintain aspect ratio */
+  height: 0;
+  overflow: hidden;
+  margin-bottom: $section-spacing;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
