--- a/styleguide/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/styleguide/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -1,8 +1,15 @@
 <header>
 	<div class="header-padding">
 		<h1 class="main-logo"><a href="#">{{title}}</a></h1>
+		<div class="mobilenav-trigger">Menu</div>
 		{{> molecules-main-nav }}
 		{{>molecules-contact-info}}
 		{{>molecules-emergency}}
 	</div>
+	{{>organisms-megamenu-about}}
+	{{>organisms-megamenu-services}}
+	{{>organisms-megamenu-pet-owners}}
+	{{>organisms-megamenu-veterinarians}}
+	{{>organisms-megamenu-news-events}}
+	{{>organisms-megamenu-search}}
 </header>
