--- a/styleguide/source/css/layout/_global.scss
+++ b/styleguide/source/css/layout/_global.scss
@@ -49,7 +49,7 @@ body {
 }
 
 hr {
-  background-color: $border-color;
+  background-color: $gray-light-4;
   height: 1px;
   border: none;
 }
@@ -60,6 +60,10 @@ hr {
   @include column(12);    
 
   @include breakpoint($m) {
+    @include column(8);    
+  }
+
+  @include breakpoint($l) {
     @include column(9);    
   }
 
@@ -73,13 +77,14 @@ hr {
   ol {
     list-style: decimal;
   }
+}
 
-  .twocolumn {
-    @include breakpoint($m) {
-      @include column-count(2);
-    }
+.twocolumn {
+  @include breakpoint($m) {
+    @include column-count(2);
   }
 }
+
 
 .clear-none {
   clear: none;
@@ -90,6 +95,11 @@ hr {
   @include column(12);    
 
   @include breakpoint($m) {
+    @include column(4);    
+    @include last;    
+    float: right;
+  }
+  @include breakpoint($l) {
     @include column(3);    
     @include last;    
     float: right;
@@ -98,4 +108,17 @@ hr {
 
 section {
   margin-top: $section-spacing;
+}
+
+.divider-top {
+  @include divider-top;
+}
+.divider-bottom {
+  @include divider-bottom;
+}
+.divider-left {
+  @include divider-left;
+}
+.divider-right {
+  @include divider-right;
 }
