--- a/styleguide/source/css/lib/_mediaqueries.scss
+++ b/styleguide/source/css/lib/_mediaqueries.scss
@@ -12,8 +12,10 @@ $breakpoint-to-ems: true;
 $s: 600px;
 $m: 768px;
 $l: 1024px;
+$l2: 1200px;
 $xl: 1400px;
 
+$nav-breakpoint: $l;
 
 $container-max-width: 1170px;
 
