--- a/styleguide/source/css/patterns/_forms.scss
+++ b/styleguide/source/css/patterns/_forms.scss
@@ -69,7 +69,7 @@ label {
   @include small;
   display: block;
   color: $text-color-subtle;
-  margin: 1.25rem 0 .25rem;
+  margin: 0 0 .25rem;
 
   /* if you want to hide labels semantically 
   position: absolute;
@@ -96,7 +96,7 @@ select, input[type="select"] {
 
 
 .field-container { 
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 fieldset {
