--- a/styleguide/source/css/style.scss
+++ b/styleguide/source/css/style.scss
@@ -38,6 +38,7 @@
 @import "layout/global";
 @import "layout/header";
 @import "layout/footer";
+@import "layout/megamenu";
 @import "layout/sidebar-articles";
 @import "layout/highlight-boxes";
 @import "layout/footer-features";
